--- a/client/app/main/panel-categories.html
+++ b/client/app/main/panel-categories.html
@@ -14,159 +14,29 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-4">
+        <div ng-repeat="category in vm.categories" class="col-lg-4">
             <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
+                <div class="col-md-2">
+                    <i class="fa {{category.icon}} fa-2x text-navy"></i>
                 </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
+                <div class="col-md-10">
+                    <h3><strong><a href="#">{{ category.label }}</a></strong></h3>
+                    <div ng-repeat="child in category.children">
+                    <div><a href="#">{{ child.label }}</a></div>
+                </div>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <!-- <div ng-repeat="category in vm.categories" class="col-md-4">
             <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
+                <div class="panel-heading">{{ category.label }}</div>
+                <div class="panel-body">
+                    <div ng-repeat="child in category.children">
+                    <div>{{ child.label }}</div>
                 </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
                 </div>
-                <div class="clearfix"></div>
             </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
-                </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
-                </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
-                </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
-                </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
-                </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
-                </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
-                </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
-                </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="contact-box">
-                <div class="col-sm-2">
-                    <i class="fa fa-car fa-2x text-navy"></i>
-                </div>
-                <div class="col-sm-10">
-                    <h3><strong> Automotive</strong></h3>
-                    <div>Gas Station</div>
-                    <div>Dealer</div>
-                    <div>Repair & Service</div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
+        </div> -->
     </div>
 </div>
